# SeekFlow

./: .gitignore  LICENSE  README.md  integration_test.py  pyproject.toml  trace_output.json  verify_reliability.py
.github/workflows/: ci.yml
benchmark/: ab_benchmark.py  benchmark_report.json  comprehensive_comparison.py  comprehensive_report.json  framework_comparison.py  production_benchmark.py  production_report.json
benchmarks/agents_comparison/: analysis_output.txt  compare_agents.py  comprehensive_saver.py  crewai_agent.py  deepseek_toolkit_agent.py  download_data.py  fair_comparison.py  final_showdown.py  langchain_agent.py  no_excuses_showdown.py  openai_raw_agent.py  rigorous_benchmark.py  truly_fair_comparison.py
benchmarks/fair_comparison_v2/: compliance.py  crewai_agent.py  langchain_agent.py  runner.py  (+2 more)
docs/: PRD-benchmark-gap-closure.md  PRD-v2-deepseek-depth.md  PRD.md  audit-report.md  production-readiness.md
examples/: 01_basic_tools.py  02_json_repair.py  03_strict_check.py  04_mcp_filesystem.py  05_eval_example.yaml  06_advanced_agent.py  07_real_api_test.py  08_dev_agent.py  demo_code_auditor.py  demo_financial.py  demo_research.py  demo_supply_chain.py  multi_round_benchmark.py
scripts/: check_xfail_policy.py
tests/: test_adapters.py  test_agent_builtin_tools.py  test_anthropic_compat.py  test_async_runtime.py  test_balance.py  test_batch_client.py  test_cache.py  test_calculate_safety.py  test_chaos.py  test_chat_batch.py  test_cli.py  test_client.py  test_complex_production_agents.py  test_cost.py  test_deepseek_thinking_protocol.py  test_errors.py  test_eval.py  test_executor_cache.py  test_files.py  test_fim.py  test_import_smoke.py  test_json_repair.py  test_mcp_adapter.py  test_mcp_config.py  test_mcp_executor.py  test_parallel.py  test_perf_issues.py  test_policy.py  test_polish_stress.py  test_prod_issues.py  test_production_agents.py  test_rate_limit.py  test_real_stress.py  test_reasoning.py  test_retry.py  test_retry_executor.py  test_runtime.py  test_runtime_retry.py  test_search.py  test_strict_checker.py  (+14 more)
(+295 files in other folders)
