[project]
name = "deepseek-toolkit"
version = "0.1.0"
description = "Production-grade reliability layer for DeepSeek tool calling — JSON repair, error recovery, type coercion, strict mode, streaming, and trace."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DeepSeek Toolkit Contributors"},
]
keywords = [
    "deepseek",
    "tool-calling",
    "function-calling",
    "json-repair",
    "agent",
    "llm",
    "ai",
    "mcp",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/user/deepseek-toolkit"
Repository = "https://github.com/user/deepseek-toolkit"
Issues = "https://github.com/user/deepseek-toolkit/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
]

[project.scripts]
deepseek-toolkit = "deepseek_toolkit.cli:app"
dstk = "deepseek_toolkit.cli:app"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
